fixed some overflow issues Redesigned signup tab 2 according to the design of signup tab 1 Changed close button icon (old logo was pixelated)

--- a/SemesterProject_2022/src/main/resources/com/example/semesterproject_2022/SignUp.css
+++ b/SemesterProject_2022/src/main/resources/com/example/semesterproject_2022/SignUp.css
@@ -9,9 +9,7 @@
     -fx-font-family: 'Poppins';
     -fx-font-weight: bold;
 }
-#button1{
 
-    }
 #t1,#t2,#t3,#t4,#t5,#t6{
     -fx-background-radius: 12px;
 }
